userid bug and modal spacing fix

--- a/src/Marca/HomeBundle/Resources/public/css/local.css
+++ b/src/Marca/HomeBundle/Resources/public/css/local.css
@@ -114,6 +114,7 @@ iframe {border:0px;}
     display: inline-block;
     width:auto;
     height:auto;
+    margin-bottom: -10px;
 }
 
 /********** End 01a. Accessibility **********/
@@ -252,15 +253,6 @@ ul.nav-list  {
     font-weight:normal;
 }
 
-div.inline input {
-    display:inline;
-}
-
-div.inline label {
-    display:inline;
-    padding:.5em;
-}
-
 #course-home {
     margin-left: 15px;
 }
@@ -283,6 +275,14 @@ div.inline label {
 
 .navbar-inverse .navbar-nav > li > a {
     color: #fff;
+}
+
+.navbar-inverse .navbar-nav > li > a:hover {
+    background-color: black;
+}
+
+.navbar-inverse .navbar-nav > li > a:focus {
+    background-color: black;
 }
 
 .navbar-inverse .navbar-nav > li > div {
@@ -563,36 +563,25 @@ span.btn-file {
 div.modal-body > div > label {width:100%;}
 
 div.checkbox > label {
-    padding:5px;
-    float:left;
-    display: inline;
-    margin-right: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .checkbox input[type="checkbox"] {
-    padding:5px;
-    float:left;
-    margin-left: 5px;
-    margin-right: 5px;
-    display: inline;
+    position: inherit;
+    margin-left: 10px;
 }
 
-div.radio {width:100%;float:left}
-
-div.checkbox {width:100%;float:left}
 
 div.radio > label {
-    padding:5px;
-    float:left;
-    display: inline;
-    margin-right: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .radio input[type="radio"] {
-    padding:5px;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-bottom: 20px;
+    position: inherit;
+    margin-left: 10px;
+
 }
 
 div input[type="text"] {
